--- a/index.html
+++ b/index.html
@@ -105,112 +105,15 @@
 </div>
 <div class="text-eng" style="width:500px ;left: 200pt;" >
 <textarea rows="50" cols="100" id= "hindi">
-लोकप्रिय Hollywood storylines. के लिए वैकल्पिक भारतीय स्थलों पर एक देसी musing
-पर consider के rolling grassland में Rings के Lord का Lord
-हम Latino boys. के लिए एक देसी सड़क यात्रा करते हैं ।
-White Witch एक सौ साल के लिए Narnia हो गया , लेकिन हमने snowscapes को बहुत प्यारी पाया और ever को बहुत प्यारी पाया
-शायद traveler's त्रासदी को टाला जा सकता है यदि उन्होंने गोवा में भूखंड को गोली मार दी है , क्योंकि वे अपने see को प्यार करते हैं और वे where. नहीं जाते ।
-भारतीय अवकाश के अनुभव अधिक experimentative हैं और कुछ different. करने का प्रयास करते हैं ।
-अपनी left, किले पर अरब सागर के विशाल दृश्य के साथ Tiracol के विशाल दृश्य के साथ you में पुर्तगालियों का किला पुर्तगालियों को मिलता है ।
-What's एक संपूर्ण द्वीप के साथ - साथ yourself, Vini's फार्म के साथ - साथ Farm Farm फार्म का एक भाग ।
-इस रेगिस्तान के मध्य में रंगीन तितली तंबुओं और beautifully-designed राजस्थानी राजस्थानी huts से यात्रियों को बाहर निकलने का अहसास है ।
-: Goa, इंडिया
-lush हरियाली और शांतिपूर्ण environs, Kodaikanal के साथ foreign foreign का अंतिम मनोरंजन स्थल है ।
-यदि reality से दूर की ओर यात्रा की जा रही है तो आपकी तरह का vacation, Kodaikanal है ।
-Paradise Auroville Auroville से Serenity तट और Promenade Beach, के बीच स्थित पांडिचेरी भारत के सबसे लोकप्रिय तटों में से एक है ।
-इस शहर ने विश्व के turn. को देखा है ।
-अगर आप हाल ही में यात्रा कर रहे हैं , तो आप Tripoto. यात्रियों के साथ यात्रा करते हैं ।
-सूची में प्रत्येक reserve को so, घोषित किया गया है क्योंकि यह एक या अनेक खतरे species, जैसे Asian species, जैसे Asian species, को घोषित कर दिया गया है ।
-Campbell बे नेशनल पार्क और Galathea नेशनल पार्क ने भी इस biosphere. को शामिल किया है ।
-Nanda की घाटी Nanda देवी नेशनल पार्क का सबसे लोकप्रिय भाग भी युनेस्को विश्व धरोहर स्थल घोषित किया गया है ।
-Nokrek नेशनल पार्क मेघालय और it. के आसपास के क्षेत्रों में जैव विविधता का एक hotspot है ।
-जबकि आप there: के लिए एक दिन की यात्रा के लिए एक दिन की यात्रा करें ।
-हमारे travels, के दौरान हमें कई wondrous में रहना पड़ता है ।
-Lakshman के Pali जिले में लक्ष्मण लक्ष्मण एक ऐसे place. हैं ।
-यदि आप अपने cottage. में निजी तौर पर भोजन करने के लिए चुन सकते हैं
-लक्ष्मण के at में अनुभव
-लक्ष्मण Sagar, Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan Rajasthan 1139585266 ।
-Stay: के अनुसार दो लोगों के लिए travelling per night night
-जहाँ लोगों का सिर : Bordeaux, फ्रांस
-Where
-जहाँ लोगों का प्रमुख head पर्वत
-इस तट पर people लोगों के लिए 10,000 के बारे में कई month! हैं ।
-आप या तो Palolem, या Palolem. के उत्तर का मार्ग ले सकते हैं ।
-Let's Palolem. के दक्षिण में समुद्र तट के साथ प्रारंभ होता है ।
-आप को beaches. तक पहुँचने के लिए बहुत नीचे चढ़ना होगा
-Cabo
-बहुत से यात्री इस place. की यात्रा नहीं करते
-लद्दाख की सबसे सुंदर कहानियाँ अब भी सुनी जा रही हैं ।
-स्थानीय economy, की सहायता के लिए सेना स्थानीय farmers. से अपने फल और सब्जियां भी दूर करती हैं ।
-परिवार के सबसे छोटे बच्चे को monastery. में शामिल करने के लिए एक Ladakhi परंपरा It's ।
-बौद्धों का मानना है कि सर्प राजा Jokpo Likir पर सोते थे ।
-Explore, सपने के बारे में कहना और कहते हैं कि life. में बड़ी कहानियां
-"You'll मुझे किसी भी स्थान पर रोक देता है जिसे आमतौर पर ज्यादातर people. द्वारा उपेक्षित किया जाता है ।
-"I हमेशा एक traveller. रहा है
-"Stories मुझे अपने ट्रैकों में capture करने के लिए stop है
-पूर्ण light, के साथ एक कहानी है , जब मैं streets," पर says. के बारे में मेरी आवश्यकता है
-प्रिय Instagram Instagram account:
-यात्रा का एक समय सैनिक से लेकर नागरिक तक संक्रमण को सुगम बनाता है ।
-military सैनिक service, के बाद यात्रा करता है चाहे वे चाहें या not.
-यह उन्हें सुरक्षित यात्रा के लिए पूर्व की ओर देखने का एक और कारण देता है ।
-भारत एक सर्वाधिक सुरक्षित स्थान है जिसमें Jews. के खिलाफ कोई ज्ञात पूर्वाग्रह नहीं है ।
-ये कई कारण हैं जो इजरायल को India. तक ले जाते हैं
+यहाँ पर लोकप्रिय Hollywood storylines के लिए वैकल्पिक भारतीय destinations पर एक देसी musing है ।पर Tolkien consider के rolling grassland में Rings के Lord को देखते हैं ।
+हम Latino लड़कों की एक देसी सड़क यात्रा करते हैं ।एक सौ साल के लिए सफेद Witch froze froze रही , लेकिन हमने snowscapes को बहुत सुंदर पाया ।शायद यात्री त्रासदी से बचा जा सकता है यदि उन्होंने गोवा में भूखंड को गोली मार दी , क्योंकि यहां के यात्री आते हैं , वे जो कुछ देखते हैं , उससे प्यार करते हैं और वहां नहीं जाते ।
 
 </textarea>
 </div>
 <div class="text-hin" style="width:500px ;left: 200pt;" >
 <textarea rows="50" cols="100" id="english">
-Here’s a desi musing on alternate Indian destinations for popular Hollywood storylines.
-But consider Tolkien musing Lord of the Rings in the rolling grassland of Kerela.
-We offer a desi road trip to the Latino boys.
-The White Witch froze Narnia for a hundred years but we found the snowscapes just too lovely to ever vanish.
-Perhaps the traveler's tragedy could have been avoided if they shot the plot in Goa because in here, the travelers come, they love what they see and go no where.
-Indian holiday experiences are more experimentative and strive to offer something different.
-What's so special : With the panoramic view of the Arabian Sea on your left, Fort Tiracol gives you a chance to stay at a 16th century Portuguese fortress in Goa.
-What's so special : With an entire island and a butler to yourself, Vini's Farm is like an escape of your dreams.
-The colourful butterfly tents and the beautifully-designed Rajasthani mud huts in the middle of the desert give travellers a sense of escape that city dwellers are constantly in search for.
-Where : Loutolim, Goa, India
-With lush greenery and peaceful environs, Kodaikanal has long been epitomised as the ultimate fun destination for foreign travellers.
-If a psychedelic trip away from reality is your kind of vacation, Kodaikanal is the place to visit.
-From Paradise Beach, Auroville Beach, to Serenity Beach and Promenade Beach, Pondicherry is one of the most popular beach destinations in India and unlike other beach destinations in the country, beaches in Pondicherry are known for their tranquil ambience.
-This city has seen the world turn.
-If you have travelled anywhere in the recent past, share you travel story with like-minded travellers on Tripoto.
-Every reserve in the list has been declared so, as it the natural habitat of one or many endangered species, such as the Asian Tiger.
-The Campbell Bay National Park and Galathea National Park also incorporate this biosphere.
-The Valley of Flowers, the most popular part of Nanda Devi National Park has also been declared a UNESCO World Heritage Site.
-The Nokrek National park is a hotspot of biodiversity in Meghalaya and areas around it.
-While you are there: Take a day trek to Nokrek National Park's highest peak.
-Over the course of our travels, we get to stay in many wondrous places.
-Lakshman Sagar, in the Pali district of Rajasthan, is one such place.
-If you wish, can choose to dine privately in your cottage.
-Experiences at Lakshman Sagar:
-Lakshman Sagar, Raipur Road, Near Haripur Railway Station, Dist.Pali, Rajasthan 306304, Tel: +91 1139585266
-Stay: As low as ₹1500 per night for two people travelling together.
-Where people head to : Bordeaux, France
-Where you should go : China
-Where people head to: The Alps
-There are about 10,000 to 30,000 people at this beach party each month!
-You can either take the route South of Palolem, or North of Palolem.
-Let's start with beaches to the south of Palolem.
-You need to climb down a lot to reach the beaches.
-Cabo De Rama is my second favourite - again takes a little bit of effort to reach there.
-Not many travellers visit this place.
-The most stunning stories from Ladakh are still unheard secrets.
-To help the local economy, the army also sources their fruits and vegetables from the local farmers.
-It's a Ladakhi tradition to send the youngest child of the family to join the monastery.
-Buddhists believe that the snake king Jokpo slept at the Likir Gompa.
-Explore, dream and say yes to great stories in life.
-"You'll find me stopping at any spot for a frame which is usually ignored by most people.
-"I have always been a traveller.
-"Stories make me stop in my tracks to capture that perfect frame.
-With the perfect light, a story is all I need when I’m on the streets," she says.
-brewing.latte's favourite Instagram account:
-A period of travel eases the transition from military to civilian life.
-"Everybody travels after military service, whether they like it or not.
-It gives them another reason to look eastwards for safe travel options.
-India is one of the most safe destinations with no known prejudice against Jews.
-These are some of the many reasons that drive Israelis to India.
-
+Here’s a desi musing on alternate Indian destinations for popular Hollywood storylines.But consider Tolkien musing Lord of the Rings in the rolling grassland of Kerela.We offer a desi road trip to the Latino boys.
+The White Witch froze Narnia for a hundred years but we found the snowscapes just too lovely to ever vanish.Perhaps the traveler's tragedy could have been avoided if they shot the plot in Goa because in here, the travelers come, they love what they see and go no where.
 </textarea>
 </div>
 </div>
