--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ The White Witch froze Narnia for a hundred years but we found the snowscapes jus
 </textarea>
 </div>
 </div>
+    
+Click <a href="http://www.yahoo.com">here</a> to go to original blog.
 
 
 
