--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ The White Witch froze Narnia for a hundred years but we found the snowscapes jus
 </div>
 </div>
     
-Click <a href="http://www.yahoo.com">here</a> to go to original blog.
+Click <a href="http://www.yahoo.com">here</a> to read the original blog.
 
 
 
