--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="text-hin" style="width:500px ;left: 500pt;" >
 Here’s a desi musing on alternate Indian destinations for popular Hollywood storylines.But consider Tolkien musing Lord of the Rings in the rolling grassland of Kerela.We offer a desi road trip to the Latino boys.The White Witch froze Narnia for a hundred years but we found the snowscapes just too lovely to ever vanish.Perhaps the traveler's tragedy could have been avoided if they shot the plot in Goa because in here, the travelers come, they love what they see and go no where.
 </div>
-Click <a href="http://www.yahoo.com">here</a> to read the original blog.
+    <strong>Click <a href="http://www.yahoo.com">here</a> to read the original blog.</strong>
 </div>
 
 
