--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
     <option value="10">Why young Israelis travel to India and never return home</option>
   </select>
 </div>
-<div class="button-search" style="width:500px ;left: 500pt;" >
+
+<div class="button-search" style="width:500px ;left: 500pt; >
 <button onclick="mydisplay()">Show</button>
 </div>
-<div class="text-eng" style="width:500px ;left: 500pt;" >
+                         </div>
+<div class="text-eng" style="width:500px ;left: 500pt; align="center" >
 यहाँ पर लोकप्रिय Hollywood storylines के लिए वैकल्पिक भारतीय destinations पर एक देसी musing है ।पर Tolkien consider के rolling grassland में Rings के Lord को देखते हैं ।हम Latino लड़कों की एक देसी सड़क यात्रा करते हैं ।एक सौ साल के लिए सफेद Witch froze froze रही , लेकिन हमने snowscapes को बहुत सुंदर पाया ।शायद यात्री त्रासदी से बचा जा सकता है यदि उन्होंने गोवा में भूखंड को गोली मार दी , क्योंकि यहां के यात्री आते हैं , वे जो कुछ देखते हैं , उससे प्यार करते हैं और वहां नहीं जाते ।
 </div>
 <div class="text-hin" style="width:500px ;left: 500pt;" >
 Here’s a desi musing on alternate Indian destinations for popular Hollywood storylines.But consider Tolkien musing Lord of the Rings in the rolling grassland of Kerela.We offer a desi road trip to the Latino boys.The White Witch froze Narnia for a hundred years but we found the snowscapes just too lovely to ever vanish.Perhaps the traveler's tragedy could have been avoided if they shot the plot in Goa because in here, the travelers come, they love what they see and go no where.
 </div>
-    <strong>Click <a href="http://www.yahoo.com">here</a> to read the original blog.</strong>
-</div>
+<strong>Click <a href="http://www.yahoo.com">here</a> to read the original blog.</strong>
+
 
 
 
